# tcxNozzle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  addon.json
.github/workflows/: ci.yml  full-matrix.yml
example-receiver/: .gitignore  CMakeLists.txt
example-receiver/src/: main.cpp  tcApp.cpp  tcApp.h
example-sender/: .gitignore  CMakeLists.txt  addons.make
example-sender/src/: main.cpp  tcApp.cpp  tcApp.h
src/: tcxNozzle.cpp  tcxNozzle.h  tcxNozzleConfig.h  tcxNozzleReceiver.cpp  tcxNozzleReceiver.h  tcxNozzleSender.cpp  tcxNozzleSender.h  tcxNozzle_blit.mm
src/platform/win/: tcxNozzle_blit_d3d11.cpp
testApp/: addons.make  local.cmake
testApp/src/: main.cpp  tcApp.cpp  tcApp.h
testApp/tests/: test_nozzle.cpp
tests/: .gitignore  CMakeLists.txt  gpu_roundtrip.cpp  local.cmake  reference_receiver.cpp  reference_sender.cpp  test_nozzle.cpp
tests/src/: main.cpp
